--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::-webkit-scrollbar {
+    width: 5px;
+    background-color: grey;
+    /* Adjust width as needed */
+}
+
+*::-webkit-scrollbar-thumb {
+    outline: none;
+    border-radius: 5px;
+    background-color: red;
+}
