--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,27 @@
 @tailwind base;
 @tailwind components;
+
+@layer components {
+    .sideNavNItems {
+        @apply w-52 flex items-center mx-1 py-2 rounded-xl hover:bg-gray-900;
+    }
+    .sideNavIcos {
+        @apply text-white size-5 w-6 mx-4;
+    }
+    .sideNavHr {
+        @apply w-full flex items-center mx-1 py-2 justify-center cursor-default;
+    }
+    .sideNavEtx {
+        @apply text-xs px-3 py-1 rounded-xl hover:bg-gray-900
+    }
+
+}
+
 @tailwind utilities;
 
 *::-webkit-scrollbar {
     width: 5px;
     background-color: grey;
-    /* Adjust width as needed */
 }
 
 *::-webkit-scrollbar-thumb {
